force-app/main/default/objects/cgcloud__KPI_Set__c/cgcloud__KPI_Set__c.object-meta.xml
<CustomObject>
    <description>This table contains the information about the KPI Set Configuration.</description>
    <label>KPI Set</label>
    <nameField>
        <label>KPI Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>