force-app/main/default/objects/cgcloud__KPI_Set__c/fields/cgcloud__Child_Object_Dependency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Child_Object_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the KPI Set is dependent on child objects.</description>
    <label>Child Object Dependency</label>
    <type>Checkbox</type>
</CustomField>