force-app/main/default/objects/cgcloud__KPI_Set__c/fields/cgcloud__Configuration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Configuration__c</fullName>
    <label>Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>