force-app/main/default/objects/cgcloud__KPI_Set__c/fields/cgcloud__Manual_Change__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the offplatform configuration update should be triggered in a async process</description>
    <label>Manual Change</label>
    <type>Checkbox</type>
</CustomField>