force-app/main/default/objects/cgcloud__KPI_Set__c/fields/cgcloud__Statistics__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Statistics__c</fullName>
    <description>Contains statistics for the complete kpi set and all the related subsets.</description>
    <label>Statistics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>