force-app/main/default/objects/cgcloud__KPI_Set__c/validationRules/cgcloud__Usage_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Usage_cannot_be_changed</fullName>
    <active>true</active>
    <description>not allow to change usage</description>
    <errorConditionFormula>ISCHANGED( cgcloud__Usage__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Usage__c</errorDisplayField>
    <errorMessage>Usage cannot be changed</errorMessage>
</ValidationRule>